Progression 0.6.0
  Add Player Wake Up Trigger
  Add Attack Entity Trigger
  Add XP Condition
  Add XP Reward

Progression 0.5.2
  Add Achievements Command

Progression 0.5.1
  Fixed Tinkers Construct Worktable not being able to be opened at all
  Added options to disable asm, in case a specific mod is erroring
  Fix Potential packet error when loading a world

Progression 0.5.0
  Updated to Minecraft 1.8.9 / Minecraft 1.9
  Craft Locking currently supports Thaumcraft 5, Tinkers Construct 2 and Vanilla
  Internals were rewritten so any data written in 1.7.10 is pretty much guaranteed NOT to work
  Rewrote the guis, to have two modes edit and display modes
  Increased shift + right arrow to move 100 spaces, and scroll wheel to move 50, making scrolling quicker
  Changed items to use filters instead of selecting all individually
  Added Support for displaying criteria, and claiming rewards with Enchiridion Books (And more)
    (ENCHIRIDION): Added Hide/Show Book Layer Reward
    (ENCHIRIDION): Add Open Book Gui Reward (Could make blocks open your gui?)
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Criteria Feature
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Tasks Feature
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Points Feature
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Rewards Feature
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Tabs Feature
    (ENCHIRIDION:BOOKS:ACTIONS):  Added Claim Specific Reward Action
    (ENCHIRIDION:BOOKS:ACTIONS):  Added Complete Criteria Action
  Added ability to create and join teams
  Added Saving and Loading of Individual Tabs and Criteria
  Added a version of the Progression Book that will open the editor in survival
    Because of this, creative mode now acts like you were in survival
  Added a Player Specific command for resetting data
  Added Chat Trigger
  Added Has Criteria Condition
  Added Has Potion Effect Condition
  Added Has True/False Condition
  Added Has Points Condition