@@ -1,28 +1,27 @@
 package joshie.progression.commands;
 
 import net.minecraft.command.ICommandSender;
-import net.minecraft.stats.Achievement;
-import net.minecraft.stats.AchievementList;
+import net.minecraft.entity.EntityList;
 
 import java.io.PrintWriter;
 
 @Command
-public class CommandAchievement extends AbstractCommand {
+public class CommandEntity extends AbstractCommand {
     @Override
     public String getCommandName() {
-        return "achievements";
+        return "entities";
     }
 
     @Override
     public boolean processCommand(ICommandSender sender, String[] parameters) {
         try {
             StringBuilder builder = new StringBuilder();
-            for (Achievement a: AchievementList.ACHIEVEMENTS) {
-                if (a == null) continue;
-                builder.append(a.statId + "\n");
+            for (String s: EntityList.NAME_TO_CLASS.keySet()) {
+                if (s == null) continue;
+                builder.append(s + "\n");
             }
 
-            PrintWriter writer = new PrintWriter("achievements.log", "UTF-8");
+            PrintWriter writer = new PrintWriter("entities.log", "UTF-8");
             writer.write(builder.toString());
             writer.close();
         } catch (Exception e) {
