@@ -5,8 +5,6 @@ import joshie.progression.api.special.IHasEventBus;
 import joshie.progression.helpers.PlayerHelper;
 import joshie.progression.lib.WorldLocation;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.nbt.NBTTagCompound;
-import net.minecraft.nbt.NBTTagList;
 import net.minecraft.util.math.BlockPos;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.world.BlockEvent;
@@ -43,36 +41,5 @@ public class FilterPlayerLastBroken extends FilterLocationBase implements IHasEv
     @Override
     public boolean matches(WorldLocation location) {
         return true;
-    }
-
-    public static void writeToNBT(NBTTagCompound nbt) {
-        NBTTagList list = new NBTTagList();
-        for (UUID uuid: cache.keySet()) {
-            BlockPos pos = cache.get(uuid);
-            if (pos != null) {
-                NBTTagCompound tag = new NBTTagCompound();
-                tag.setString("UUID", uuid.toString());
-                tag.setInteger("X", pos.getX());
-                tag.setInteger("Y", pos.getY());
-                tag.setInteger("Z", pos.getZ());
-                list.appendTag(tag);
-            }
-        }
-
-        nbt.setTag("LastBroken", list);
-    }
-
-    public static void readFromNBT(NBTTagCompound nbt) {
-        NBTTagList list = nbt.getTagList("LastBroken", 10);
-        for (int i = 0; i < list.tagCount(); i++) {
-            try {
-                NBTTagCompound tag = list.getCompoundTagAt(i);
-                UUID uuid = UUID.fromString(tag.getString("UUID"));
-                BlockPos pos = new BlockPos(tag.getInteger("X"), tag.getInteger("Y"), tag.getInteger("Z"));
-                if (uuid != null) {
-                    cache.put(uuid, pos);
-                }
-            } catch (Exception e) {}
-        }
     }
 }
