@@ -3,6 +3,8 @@ Progression 0.6.0
   Add Attack Entity Trigger
   Add XP Condition
   Add XP Reward
+  Add Entity Name Dump /progression entities
+  Add Potion Name Dump /progression potions
 
 Progression 0.5.2
   Add Achievements Command
